--- a/PMCTool.App/Views/Auth/Login.cshtml
+++ b/PMCTool.App/Views/Auth/Login.cshtml
@@ -21,7 +21,7 @@
                     <form class="form" id="frmLogin">
                         <div class="card card-login card-hidden">
                             <div class="card-header text-center">
-                                <img class="hlogo" src="~/images/logo3.png" asp-append-version="true">
+                                <img class="hlogo" src="~/images/logoana.png" asp-append-version="true" style="height: 101px;">
                             </div>
                             <div class="card-body ">
                                 <div class="card-body">
@@ -49,7 +49,7 @@
                     <form class="form" id="frmPassword">
                         <div class="card card-login card-hidden">
                             <div class="card-header text-center">
-                                <img class="hlogo" src="~/images/logo3.png" asp-append-version="true">
+                                <img class="hlogo" src="~/images/logoana.png" asp-append-version="true" style="height: 101px;">
                             </div>
                             <div class="card-body ">
                                 <div class="card-body">
@@ -74,7 +74,7 @@
                     <form class="form">
                         <div class="card card-login card-hidden">
                             <div class="card-header text-center">
-                                <img class="hlogo" src="~/images/logo3.png" asp-append-version="true">
+                                <img class="hlogo" src="~/images/logoana.png" asp-append-version="true" style="height: 101px;">
                             </div>
                             <div class="card-body ">
                                 <div class="card-body">
