--- a/PMCTool.App/Views/BranchAdvances/Index.cshtml
+++ b/PMCTool.App/Views/BranchAdvances/Index.cshtml
@@ -12,7 +12,7 @@
                         <div class="col-md-12 pt-4">
                            <small class="font-weight-normal">Analytics</small>
                            <h4 class="media align-items-center font-weight-bold  mb-0 mt-0">
-                              <span class="color-drackgreen"> Avances de sucursales	</span>
+                              <span class="color-drackred"> Avances de sucursales	</span>
                            </h4>
                            @*@{
                         Html.BeginForm("printReportBranchAdvances", "BranchAdvances", FormMethod.Post);
