--- a/PMCTool.App/Views/BranchLocations/Index.cshtml
+++ b/PMCTool.App/Views/BranchLocations/Index.cshtml
@@ -44,7 +44,7 @@
                                     </span>
                                     Mostrar Reporte
                                 </button>
-                                <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1">
+                                <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1" hidden="hidden">
                                     <span class="btn-label">
                                         <i class="fas fa-times"></i>
                                     </span>
@@ -61,7 +61,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="row justify-content-center mt-3 div-map">
+                <div class="row justify-content-center mt-3 div-map" hidden="hidden">
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body ">
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center div-table">
+                <div class="row justify-content-center div-table" hidden="hidden">
                     <div class="col-12">
                         <div class="card data-tables">
                             <div class="card-body table-striped table-no-bordered table-hover dataTable dtr-inline table-full-width">
