--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -105,18 +105,20 @@
                     <div class="collapse navbar-collapse justify-content-end">
                         <ul class="navbar-nav">
 
-                            @{
-                                if (!string.IsNullOrEmpty(envImage))
-                                {
-                                    <li class="dropdown nav-item d-none d-sm-block d-sm-none d-md-block">
-                                        <div class="user">
-                                            <div class="photo pt-1 photobar">
-                                                <img src="@envImage" asp-append-version="true">
-                                            </div>
-                                        </div>
-                                    </li>
-                                }
-                            }
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="nc-icon nc-bullet-list-67"></i>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                                     
+                                    <a class="dropdown-item" href="@Url.Action("Lock", "Home")">
+                                        <i class="nc-icon nc-lock-circle-open"></i> @Localizer["Lockscreen"]
+                                    </a>
+                                    <a href="@Url.Action("Logout", "Auth")" class="dropdown-item text-danger">
+                                        <i class="nc-icon nc-button-power"></i> @Localizer["Logout"]
+                                    </a>
+                                </div>
+                            </li>
 
                         </ul>
                     </div>
