--- a/PMCTool.App/wwwroot/css/light-bootstrap-dashboard-bambien.css
+++ b/PMCTool.App/wwwroot/css/light-bootstrap-dashboard-bambien.css
@@ -13644,3 +13644,8 @@ select.selectpicker {
 #tFactSheet {
     border: 1px solid #a5a5a5;
 }
+.namescreen {
+    text-transform: capitalize;
+    font-weight: 500;
+    text-shadow: -1px 1px 20px rgb(255 255 255 / 60%);
+}
