--- a/PMCTool.App/wwwroot/css/light-bootstrap-dashboard.css
+++ b/PMCTool.App/wwwroot/css/light-bootstrap-dashboard.css
@@ -13612,3 +13612,9 @@ select.selectpicker {
 .bg-white {
     background-color: white;
 }
+
+.namescreen {
+    text-transform: capitalize;
+    font-weight: 500;
+    text-shadow: -1px 1px 20px rgb(255 255 255 / 60%);
+}
