Advance Report Branch locations

--- a/PMCTool.App/Views/BranchLocations/Index.cshtml
+++ b/PMCTool.App/Views/BranchLocations/Index.cshtml
@@ -22,7 +22,7 @@
                                 @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { @id = "Estate", @class = "selectpicker", @style = "", @data_style= "btn-default btn-outline", @data_title="Estados" })
                             </div>
                             <div class="col-3">
-                                <select multiple id="Municipios" name="Municipio" class="selectpicker" data-title="Municipios" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
+                                <select multiple id="Municipios" name="Municipios" class="selectpicker" data-title="Municipios" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
                                 </select>
                             </div>
                             <div class="col-3">
@@ -56,7 +56,7 @@
                 </div>
                 <div class="row justify-content-center mt-4">
                     <div class="col-md-12 text-right text-right">
-                        <button class="btn btn-social btn-tumblr btn-link" id="bntReportPDF">
+                        <button class="btn btn-social btn-tumblr btn-link" id="bntReportPDFBL">
                             <i class="fas fa-file-pdf"></i> Exportar en PDF
                         </button>
                     </div>
