--- a/PMCTool.App/wwwroot/css/light-bootstrap-dashboard-bambien.css
+++ b/PMCTool.App/wwwroot/css/light-bootstrap-dashboard-bambien.css
@@ -501,14 +501,14 @@ input:focus {
     display: block;
 }
 
-    .sidebar .logo a.logo-mini {
-        float: left;
-        width: 37px;
-        text-align: center;
-        margin-left: 15px;
-        margin-right: 14px;
-        position: relative;
-    }
+.sidebar .logo a.logo-mini {
+    float: left;
+    width: 37px;
+    text-align: center;
+    margin-left: 6px;
+    margin-right: 14px;
+    position: relative;
+}
 
 .sidebar .logo a.logo-normal {
     display: block;
@@ -580,7 +580,7 @@ input:focus {
 .sidebar .sidebar-wrapper .nav .nav-link p {
     margin: 0;
     line-height: 30px;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 600;
     text-transform: uppercase;
     white-space: nowrap;
@@ -631,7 +631,7 @@ input:focus {
     border-radius: 50%;
     float: left;
     margin-right: 11px;
-    margin-left: 23px;
+    margin-left: 10px;
     z-index: 5;
     border: 2px solid rgba(255, 255, 255, 0.3);
 }
@@ -710,18 +710,18 @@ input:focus {
     display: block;
 }
 
-    .sidebar .nav .nav-item .nav-link {
-        color: #595959;
-        margin: 3px 9px 0px 5px;
-        opacity: .86;
-        border-radius: 4px;
-        text-transform: uppercase;
-        line-height: 30px;
-        font-size: 12px;
-        font-weight: 600;
-        padding: 4px 9px;
-        white-space: nowrap;
-    }
+.sidebar .nav .nav-item .nav-link {
+    color: #595959;
+    margin: 3px 5px 0px 5px;
+    opacity: .86;
+    border-radius: 4px;
+    text-transform: uppercase;
+    line-height: 30px;
+    font-size: 11px;
+    font-weight: 600;
+    padding: 2px 4px;
+    white-space: nowrap
+}
 
 .sidebar .nav .nav-item .nav-link:hover {
     background: rgba(255, 255, 255, 0.13);
@@ -729,24 +729,24 @@ input:focus {
 }
 
 .sidebar .nav .nav-item .nav-link i {
-    font-size: 28px;
-    margin-right: 15px;
+    font-size: 21px;
+    margin-right: 5px;
     width: 30px;
     text-align: center;
     vertical-align: middle;
     float: left;
 }
 
-    .sidebar .nav .nav-item:not(.collapse .nav-link):hover .nav-link {
-        background: rgb(183 183 183 / 13%);
-        opacity: 1;
-    }
+.sidebar .nav .nav-item:not(.collapse .nav-link):hover .nav-link {
+background: rgb(183 183 183 / 13%);
+opacity: 1;
+}
 
-    .sidebar .nav .nav-item.active .nav-link {
-        /*color: #FFFFFF;*/
-        opacity: 1;
-        background: #e4e4e4;
-    }
+.sidebar .nav .nav-item.active .nav-link {
+/*color: #FFFFFF;*/
+opacity: 1;
+background: #e4e4e4;
+}
 
 .sidebar .nav .nav-item.separator {
     margin: 15px 0;
@@ -992,7 +992,7 @@ input:focus {
         display: inline-block !important;
     }
     .sidebar-mini .sidebar {
-        width: 80px;
+        width: 61px;
         display: block;
         font-weight: 200;
         z-index: 3;
