--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -37,7 +37,18 @@
     <script src="~/js/plugins/js.cookie.min.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
     <script src="~/js/plugins/jquery.i18n.min.js" asp-append-version="true"></script>
-   
+    <script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-124338594-1', 'auto');
+    ga('send', 'pageview');
+    let enviroment = '@envName';
+    </script> 
     @if (lang == null || lang == "es-MX")
     {
         <script src="~/lib/jquery-validate/localization/messages_es.min.js" asp-append-version="true"></script>
@@ -47,6 +58,7 @@
     {
         <script src="~/js/localization/messages_us.js" asp-append-version="true"></script>
     }  
+     
 </head>
 <body>
 
@@ -141,7 +153,9 @@
 
     <script src="~/js/pmctool.js" asp-append-version="true"></script>
     <script src="~/js/helper.js" asp-append-version="true"></script>
+
     <script>window.webroot = "@Url.Content("~/")";</script>
+    <script src="~/js/plugins/analytics.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
