Reporte pdf ficha de proyecto y mejoras

--- a/PMCTool.App/Views/Home/Lock.cshtml
+++ b/PMCTool.App/Views/Home/Lock.cshtml
@@ -82,6 +82,8 @@
                             <div class="card-body ">
                                 <h4 class="card-title namescreen">@userName</h4>
                                 <div class="form-group">
+                                    <input type="hidden" name="login"  value="@ViewBag.Login"/>
+                                    <input type="hidden" name="env"  value="@ViewBag.envId"/>
                                     <input type="password" name="password" placeholder="Ingresa contraseña" class="form-control">
                                 </div>
                             </div>
