--- a/PMCTool.App/Views/FactSheet/Index.cshtml
+++ b/PMCTool.App/Views/FactSheet/Index.cshtml
@@ -39,15 +39,14 @@
                         <div class="col-md-4 pb-2 text-center" id="index_card_buttons">
                             <div class="row">
                                 <button type="button" id="btnSearch" class="btn btn-wd btn-default mr-1"><span class="btn-label"><i class="fa fa-file-alt"></i></span>Mostrar Reporte</button>
-                                <button class="btn btn-wd btn-default btn-default mr-1" type="button" id="btnIrPMC"><i class="btn-icon-filter"></i>Ir a PMC-tool</button>
-                                <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1"><span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Reporte</button>
+                                 <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1"><span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Reporte</button>
                             </div>
                         </div>
                     </div>
                     <div id="divFichaTecnicaProyecto">
                         <div class="row justify-content-center mt-4">
                             <div class="col-md-12 text-right text-right">
-                                <button class="btn btn-social btn-tumblr btn-link">
+                                <button class="btn btn-social btn-tumblr btn-link bntReportPDF">
                                     <i class="fas fa-file-pdf"></i> Exportar en PDF
                                 </button>
                             </div>
