--- a/PMCTool.App/Views/BranchLocations/Index.cshtml
+++ b/PMCTool.App/Views/BranchLocations/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "_Layout";
 }
 
-<div class="content">
+<div class="content contenido">
     <div class="container-fluid">
 
         <div class="col-md-12 card">
@@ -18,8 +18,8 @@
                 <div class="row justify-content-center mt-3">
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-3"> 
-                                @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { @id = "Estate", @class = "selectpicker", @style = "", @data_style= "btn-default btn-outline", @data_title="Estados" })
+                            <div class="col-3">
+                                @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { @id = "Estate", @class = "selectpicker", @style = "", @data_style = "btn-default btn-outline", @data_title = "Estados" })
                             </div>
                             <div class="col-3">
                                 <select multiple id="Municipios" name="Municipios" class="selectpicker" data-title="Municipios" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
@@ -56,7 +56,7 @@
                 </div>
                 <div class="row justify-content-center mt-4">
                     <div class="col-md-12 text-right text-right">
-                        <button class="btn btn-social btn-tumblr btn-link" id="bntReportPDFBL">
+                        <button class="btn btn-social btn-tumblr btn-link" id="btnPDF" onclick="vBranchLocationClass.MakePDF();" hidden="hidden">
                             <i class="fas fa-file-pdf"></i> Exportar en PDF
                         </button>
                     </div>
@@ -81,12 +81,12 @@
                                     <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
                                         <thead>
                                             <tr>
-                                                <th >Sucursales</th>
-                                                <th >Estado</th>
-                                                <th >Municipio</th>
-                                                <th >Localidad</th>
-                                                <th >Estatus</th>
-                                                <th >Avance</th>
+                                                <th>Sucursales</th>
+                                                <th>Estado</th>
+                                                <th>Municipio</th>
+                                                <th>Localidad</th>
+                                                <th>Estatus</th>
+                                                <th>Avance</th>
                                             </tr>
                                         </thead>
                                         <tbody id="dataTable">
@@ -94,6 +94,37 @@
                                     </table>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" id="rowEncabezado" hidden="hidden">
+                    <div class="col-md-12">
+                        <div id="encabezado">
+                            <div style="margin: 2%">
+                                <!-- Navbar -->
+                                <nav class="navbar navbar-expand-lg " style="padding-bottom: 31px">
+                                    <div class="container-fluid" style="padding-bottom: 0px;">
+                                        <div class="col-md-12">
+                                            <div class="row" style="padding-top:12px; height: 90px;">
+                                                <div class="col-md-8 text-left">
+                                                    <div style="font-size: 1.5em; color: #235B4E !important; padding-top: 22px; text-transform: uppercase;">
+                                                        <strong>Ubicación de sucursales</strong>
+                                                    </div>
+                                                </div><div class="col-md-4 text-right">
+                                                    <img src="/images/banbien.png" width="100px" style="top: 0px; right: 36px;">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" id="divCanvas">
+                    <div class="col-md-12">
+                        <div id="contenedorCanvas">
+
                         </div>
                     </div>
                 </div>
@@ -107,6 +138,8 @@
     <script src="~/js/plugins/jquery.dataTables.min.js"></script>
     <!--  Google Maps Plugin    -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAT4_lYZoSRsv9h_reS4rR8lBgzY6ZchYI&libraries=&v=weekly" defer></script>
+    <script src="~/js/plugins/html2canvas.min.js"></script>
+    <script src="~/js/plugins/jspdf.js"></script>
     <script src="~/js/core/vBranchLocations.js" asp-append-version="true"></script>
     <script src="~/js/core/vBranchAdvances.js" asp-append-version="true"></script>
 }
