--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -143,7 +143,7 @@
     </div>
 
     <script type="text/javascript" src="~/js/plugins/moment.min.js" asp-append-version="true"></script>
-    <script type="text/javascript" src="" ~ /js/plugins/moment-duration-format.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/plugins/moment-duration-format.min.js" asp-append-version="true"></script>
 
     <script src="~/js/plugins/sweetalert2.min.js" asp-append-version="true"></script>
     <script src="~/js/plugins/bootstrap-tagsinput.js" asp-append-version="true"></script>
