#784 - ANALYTICS BANBIEN > Homologar lista > Reporte de Ubicación

--- a/PMCTool.App/Views/BranchLocations/Index.cshtml
+++ b/PMCTool.App/Views/BranchLocations/Index.cshtml
@@ -22,7 +22,7 @@
                                 @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { @id = "Estate", @class = "selectpicker", @style = "", @data_style = "btn-default btn-outline", @data_title = "Estados" })
                             </div>
                             <div class="col-3">
-                                <select multiple id="Municipios" name="Municipios" class="selectpicker" data-title="Municipios" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
+                                <select multiple id="Municipios" name="Municipios" class="selectpicker" data-title="Municipio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-actions-box="true">
                                 </select>
                             </div>
                             <div class="col-3">
