--- a/PMCTool.App/wwwroot/css/light-bootstrap-dashboard-bambien.css
+++ b/PMCTool.App/wwwroot/css/light-bootstrap-dashboard-bambien.css
@@ -13649,3 +13649,6 @@ select.selectpicker {
     font-weight: 500;
     text-shadow: -1px 1px 20px rgb(255 255 255 / 60%);
 }
+#BAbtnClose {
+display:none;
+}
