--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sweetalert2.min.css" asp-append-version="true" />
-     @if(envName == "Analytics Environment" || envName == "BANBIEN"){ 
+     @if(envName == "BanBien"){ 
          <link rel="stylesheet" href="~/css/light-bootstrap-dashboard-bambien.css" asp-append-version="true" />  
     }
     else{
