--- a/PMCTool.App/Views/Shared/_LayoutLogin.cshtml
+++ b/PMCTool.App/Views/Shared/_LayoutLogin.cshtml
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute">
             <div class="container">
                 <div class="navbar-wrapper">
-                    <a class="navbar-brand" href="https://pmc-tool.com" target="_blank">PMC-TOOL</a>
+                    <a class="navbar-brand" href="https://pmc-tool.com" target="_blank"><img src="/images/logopmcanalytics.png" style="height: 32px;"/></a>
                 </div>
             </div>
         </nav>
