--- a/PMCTool.App/Views/Home/Index.cshtml
+++ b/PMCTool.App/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
         <div class="row"> 
                     <div class="container-fluid pl-0 ml-0">
                       <center> 
-                          @if(envName == "Analytics Environment" || envName == "BANBIEN"){ 
+                          @if(envName == "BanBien"){ 
                                  <img src="/images/banbien.png">
                             }
                             else{
