--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -21,12 +21,12 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sweetalert2.min.css" asp-append-version="true" />
-     @if(envName == "BanBien"){ 
+     @if (envName == "BanBien") {
          <link rel="stylesheet" href="~/css/light-bootstrap-dashboard-bambien.css" asp-append-version="true" />  
-    }
-    else{
+     }
+     else {
         <link rel="stylesheet" href="~/css/light-bootstrap-dashboard.css" asp-append-version="true" />   
-    }
+     }
    
      <link rel="stylesheet" href="~/css/pmctool.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/elementStatus.css" asp-append-version="true" />
@@ -38,16 +38,18 @@
     <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
     <script src="~/js/plugins/jquery.i18n.min.js" asp-append-version="true"></script>
     <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        if ('@AppSettings.Current.AppState' == 'Production') {
+            (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-124338594-1', 'auto');
-    ga('send', 'pageview');
-    let enviroment = '@envName';
+            ga('create', 'UA-124338594-1', 'auto');
+            ga('send', 'pageview');
+            let enviroment = '@envName';
+        }
     </script> 
     @if (lang == null || lang == "es-MX")
     {
@@ -122,7 +124,7 @@
                                     <i class="nc-icon nc-bullet-list-67"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                     
+
                                     <a class="dropdown-item" href="@Url.Action("Lock", "Home")">
                                         <i class="nc-icon nc-lock-circle-open"></i> @Localizer["Lockscreen"]
                                     </a>
@@ -155,10 +157,14 @@
     <script src="~/js/helper.js" asp-append-version="true"></script>
 
     <script>window.webroot = "@Url.Content("~/")";</script>
-    <script src="~/js/plugins/analytics.js" asp-append-version="true"></script>
-
+    @{
+        if (@AppSettings.Current.AppState == "Production")
+        {
+            <script src="~/js/plugins/analytics.js" asp-append-version="true"></script>
+        }
+    }
     @RenderSection("Scripts", required: false)
-</body>
+    </body>
 </html>
 
 <div id="loader" class="spinner" hidden="hidden">
