--- a/PMCTool.App/Views/Home/Index.cshtml
+++ b/PMCTool.App/Views/Home/Index.cshtml
@@ -53,13 +53,15 @@
             </div>
         </div>
         <div class="row"> 
-                    <div class="container-fluid pl-0 ml-0">
+                    <div class="container-fluid pl-0 ml-0" style="height: 500px;">
                       <center> 
-                          @if(envName == "BanBien"){ 
-                                 <img src="/images/banbien.png">
-                            }
-                            else{
-                             }
+                    @if(envName == "BanBien"){ 
+                            <img src="/images/banbien.png" style="height: 400px;">
+                    }
+                    else
+                    {
+                        <img src="/images/bghome.png" style="height: 350px;">
+                    }
                        
                       </center>
                     </div> 
