--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -21,12 +21,10 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sweetalert2.min.css" asp-append-version="true" />
-     @if(envName == "BanBien"){ 
-         <link rel="stylesheet" href="~/css/light-bootstrap-dashboard-bambien.css" asp-append-version="true" />  
+    @{
+        string style = await MenuHelper.GetThemeStyleEnvironmen(Context);
     }
-    else{
-        <link rel="stylesheet" href="~/css/light-bootstrap-dashboard.css" asp-append-version="true" />   
-    }
+     <link rel="stylesheet" href="@style" asp-append-version="true" />   
    
      <link rel="stylesheet" href="~/css/pmctool.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/elementStatus.css" asp-append-version="true" />
