--- a/PMCTool.App/wwwroot/css/light-bootstrap-dashboard.css
+++ b/PMCTool.App/wwwroot/css/light-bootstrap-dashboard.css
@@ -13618,3 +13618,6 @@ select.selectpicker {
     font-weight: 500;
     text-shadow: -1px 1px 20px rgb(255 255 255 / 60%);
 }
+.dropdown-item.active, .dropdown-item:active {
+    background-color: #a3a3a3 !important;
+}
