--- a/PMCTool.App/Views/BranchAdvances/Index.cshtml
+++ b/PMCTool.App/Views/BranchAdvances/Index.cshtml
@@ -51,13 +51,13 @@
                                     </div>
                                     <div class="col-3 mt-1">
                                         <div class="row">
-                                            <button type="button" class="btn btn-wd btn-default btn-default" id="BAbntReport">
+                                            <button type="button" class="btn btn-wd btn-default btn-default ml-3" id="BAbntReport">
                                                 <span class="btn-label">
                                                     <i class="fa fa-file-alt"></i>
                                                 </span>
                                                 Mostrar Reporte
                                             </button>
-                                            <button type="button" id="BAbtnClose" class="btn btn-wd btn-default btn-default mr-1" style=""><span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Reporte</button>
+                                            <button type="button" id="BAbtnClose" class="btn btn-wd btn-default btn-default mr-1 ml-3" style=""><span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Reporte</button>
                                             
                                             
                                         </div>
