#814 ANALYTICS > FILTROS DE AVANCE DE SUCURSAL

--- a/PMCTool.App/Views/BranchAdvances/Index.cshtml
+++ b/PMCTool.App/Views/BranchAdvances/Index.cshtml
@@ -25,16 +25,16 @@
                         <div class="row justify-content-center mt-3">
                             <div class="col-12">
                             <div class="row"> 
-                                    <div class="col-3">
+                                    <div class="ml-2">
                                      @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { @id = "Estate", @class = "selectpicker", @style = "", @data_style= "btn-default btn-outline", @data_title="Estados" })
                                        
                                     </div>
                                     
-                                    <div class="col-2">
+                                    <div class="ml-2">
                                         <select multiple id="Municipios" name="Municipios" class="selectpicker" data-title="Municipio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple data-actions-box="true"> 
                                         </select>
                                     </div>
-                                    <div class="col-2">
+                                    <div class="ml-2">
                                         <select multiple name="tipopredio" class="selectpicker" id="tipopredio" data-title="Tipo de predio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
                                                 <option value="1">MUNICIPAL</option>
                                                 <option value="2">FEDERAL</option>
@@ -43,21 +43,21 @@
                                         </select>
                                     </div>
                                     
-                                    <div class="col-2">
+                                    <div class="ml-2">
                                         <select name="tipovista" id="tipovista" class="selectpicker" data-title="Vista" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
                                                 <option value="default" selected>Default</option>
                                                 <option value="porcentaje">Porcentaje</option> 
                                         </select>
                                     </div>
-                                    <div class="col-3 mt-1">
-                                        <div class="row">
-                                            <button type="button" class="btn btn-wd btn-default btn-default ml-3" id="BAbntReport">
+                                    <div class="mt-1 ml-2">
+                                        <div>
+                                            <button type="button" class="btn btn-wd btn-default btn-default" id="BAbntReport">
                                                 <span class="btn-label">
                                                     <i class="fa fa-file-alt"></i>
                                                 </span>
                                                 Mostrar Reporte
                                             </button>
-                                            <button type="button" id="BAbtnClose" class="btn btn-wd btn-default btn-default mr-1 ml-3" style=""><span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Reporte</button>
+                                            <button type="button" id="BAbtnClose" class="btn btn-wd btn-default btn-default mr-1" style=""><span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Reporte</button>
                                             
                                             
                                         </div>
