--- a/PMCTool.App/Views/FactSheet/Index.cshtml
+++ b/PMCTool.App/Views/FactSheet/Index.cshtml
@@ -36,7 +36,7 @@
                         </div>
                         <div class="col-md-4 pb-2"></div>
                         <div class="col-md-4 pb-2 text-center" id="index_card_buttons">
-                            <div class="row">
+                            <div class="ml-1 row">
                                 <button type="button" id="btnSearch" class="btn btn-wd btn-default mr-1"><span class="btn-label"><i class="fa fa-file-alt"></i></span>Mostrar Reporte</button>
                                  <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1"><span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Reporte</button>
                             </div>
