--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Página comercial del PMC-tool">
     <meta name="author" content="InovenTI">
+    <meta name="client" content="@envName">    
     <title>PMC-Tool&reg; Application</title>
     <link rel="shortcut icon" href="~/images/icono_pmc_tool.png" asp-append-version="true">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,500i,700,900" rel="stylesheet">
@@ -34,21 +35,7 @@
     <script src="~/js/plugins/popper.min.js" asp-append-version="true"></script>
     <script src="~/js/plugins/js.cookie.min.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
-    <script src="~/js/plugins/jquery.i18n.min.js" asp-append-version="true"></script>
-    <script>
-        if ('@AppSettings.Current.AppState' == 'Production') {
-            (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-124338594-1', 'auto');
-            ga('send', 'pageview');
-            let enviroment = '@envName';
-        }
-    </script>
+    <script src="~/js/plugins/jquery.i18n.min.js" asp-append-version="true"></script> 
     @if (lang == null || lang == "es-MX")
     {
         <script src="~/lib/jquery-validate/localization/messages_es.min.js" asp-append-version="true"></script>
@@ -58,6 +45,7 @@
     {
         <script src="~/js/localization/messages_us.js" asp-append-version="true"></script>
     }
+    <script src="~/js/plugins/analytics.js" asp-append-version="true"></script>
 
 </head>
 <body>
