ABALYTICS SCT - Global Status

--- a/PMCTool.App/Views/Shared/_Layout.cshtml
+++ b/PMCTool.App/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     @{
         string style = await MenuHelper.GetThemeStyleEnvironmen(Context);
     }
+    <link href="~/css/detalle-actividad.css" rel="stylesheet" asp-append-version="true"/>
     <link rel="stylesheet" href="@style" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/pmctool.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/elementStatus.css" asp-append-version="true" />
