--- a/PMCTool.App/Views/GlobalStatus/Index.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model PMCTool.Models.Core.Location
 @{
     ViewData["Title"] = "Estatus Global";
     Layout = "_Layout";
@@ -20,44 +20,11 @@
                         <div class="col-12">
                             <div class="row">
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select name="Entidad" id="Entidad" class="selectpicker" data-title="Entidad Federativa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple data-live-search="true" data-actions-box="true">
-                                        <option value="1">Aguascalientes</option>
-                                        <option value="2">Baja California</option>
-                                        <option value="3"> Baja California Sur</option>
-                                        <option value="4">Campeche</option>
-                                        <option value="5">Chiapas</option>
-                                        <option value="6">Chihuahua</option>
-                                        <option value="7">Coahuila</option>
-                                        <option value="8">Colima</option>
-                                        <option value="9">Ciudad de México / Distrito Federal</option>
-                                        <option value="10">Durango</option>
-                                        <option value="11">Estado de México</option>
-                                        <option value="12">Guanajuato</option>
-                                        <option value="13">Guerrero</option>
-                                        <option value="14">Hidalgo</option>
-                                        <option value="15">Jalisco</option>
-                                        <option value="16">Michoacán</option>
-                                        <option value="17">Morelos</option>
-                                        <option value="18">Nayarit</option>
-                                        <option value="19">Nuevo León</option>
-                                        <option value="20">Oaxaca</option>
-                                        <option value="21">Puebla</option>
-                                        <option value="22">Querétaro</option>
-                                        <option value="23">Quintana Roo</option>
-                                        <option value="24">San Luis Potosí</option>
-                                        <option value="25">Sinaloa</option>
-                                        <option value="26">Sonora</option>
-                                        <option value="27">Tabasco</option>
-                                        <option value="28">Tamaulipas</option>
-                                        <option value="29">Tlaxcala</option>
-                                        <option value="30">Veracruz</option>
-                                        <option value="31">Yucatán</option>
-                                        <option value="32">Zacatecas</option>
-                                    </select>
+                                    @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { multiple = true, @id = "Entidad", @class = "selectpicker", @data_style = "btn-default btn-outline", @data_title = "Entidad Federativa", @data_live_search = true, @data_actions_box = true }) 
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                     <select name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
-                                        <option value="ARTF">ARTF</option>
+                                        <option value="ARTF">Agencia Reguladora de Transporte Ferroviario</option>
                                         <option value="DGC">DG Carretera</option>
                                         <option value="DGCC">DG Conservación de Carreteras</option>
                                         <option value="DGDC">DG Desarrollo carretero</option>
@@ -65,22 +32,23 @@
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="TipoP" id="TipoProyecto" class="selectpicker" data-title="Tipo de proyecto" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
+                                    <select multiple name="TipoP" id="TipoProyecto" class="selectpicker" data-title="Tipo de proyecto" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
                                         <option value="1">Compromisos del presidente</option>
                                         <option value="2">Conectividad AIFA</option>
                                     </select>
                                 </div>
 
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="Etapa" id="Etapa" class="selectpicker" data-title="Etapa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
+                                    <select multiple name="Etapa" id="Etapa" class="selectpicker" data-title="Etapa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
                                         <option value="1">En ejecución</option>
                                         <option value="2">En proceso para ejecución</option>
                                     </select>
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="Inversion" id="Inversion" class="selectpicker" data-title="Inversión" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple>
-                                        <option value="PEF">PEF</option>
+                                    <select multiple name="Inversion" id="Inversion" class="selectpicker" data-title="Inversión" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
+                                        <option value="FEDERAL">Federal</option>
                                         <option value="FONADIN">FONADIN</option>
+                                        <option value="FONDEN">FONDEN</option>
                                         <option value="ESTATAL">Estatal</option>
                                         <option value="PRIVADA">Privada</option>
                                     </select>
@@ -109,14 +77,14 @@
                             <button type="button" id="btnDetalle" class="btn btn-wd btn-default btn-default mr-1" style="">
                                 <span class="btn-label"><i class="fas fa-align-justify"></i></span> Detalle Reporte
                             </button>
-                            <a type="button" id="btnDetalleClose" class="btn btn-round btn-sm btn-back">
+                            <button type="button" id="btnDetalleClose" class="btn btn-round btn-sm btn-back">
                                 <span class="btn-label">
                                     <i class="fas fa-arrow-left"></i>
                                 </span>Regresar
-                            </a>
+                            </button>
                             @*<button type="button" id="btnDetalleClose" class="btn btn-wd btn-default btn-default mr-1" style="">
-                                <span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Detalle
-                            </button>*@
+                                    <span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Detalle
+                                </button>*@
                             <button class="btn btn-social btn-tumblr btn-link">
                                 <i class="fas fa-file-pdf"></i> Exportar en PDF
                             </button>
