--- a/PMCTool.App/Views/GlobalStatus/_PartialTableGlobalStatusDetail.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/_PartialTableGlobalStatusDetail.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<PMCTool.Models.Environment.GlobalStatusDetail>;
 <div class="row">
-    <div class="col-md-9 mt-3">
+    <div class="col-md-12- mt-3">
         <h5 class="title-report">
             Portafolio de proyectos
         </h5>
     </div>
-    <div class="col-md-3 mt-3 text-right">
+    @*<div class="col-md-3 mt-3 text-right">
         <span clas="color-font-black">Fecha: 30/06/2021</span>
-    </div>
+    </div>*@
 </div>
 <div class="fresh-datatables">
     <table id="tableGlobalStatusDetail" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%">
@@ -28,7 +28,7 @@
                 {
                     <tr>
                         <th>@item.Code</th>
-                        <td><a href="/FactSheet/Index?projectId=@item.ProjectID">@item.ProjectName</a></td>
+                        <td><a href="/FactSheetA?projectid=@item.ProjectID">@item.ProjectName</a></td>
                         <td>@item.Stage</td>
                         <td>@item.GeneralDirection</td>
                         <td>@item.ProjectType</td>
