Actualizacion de librerias

--- a/PMCTool.App/Views/GlobalStatus/_PartialTableGlobalStatusDetail.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/_PartialTableGlobalStatusDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<PMCTool.Models.Environment.GlobalStatusDetail>;
 <div class="row">
-    <div class="col-md-12- mt-3">
+    <div class="col-md-12 mt-3">
         <h5 class="title-report">
             Portafolio de proyectos
         </h5>
