Home - Validacion para logo de SCT

--- a/PMCTool.App/Views/Home/Index.cshtml
+++ b/PMCTool.App/Views/Home/Index.cshtml
@@ -58,6 +58,10 @@
                     @if(envName == "BanBien"){ 
                             <img src="/images/banbien.png" style="height: 400px;">
                     }
+                    else if(envName == "Sct")
+                    {
+                        <img src="img/logo.png" style="height: 421px;border-radius: 10px;">
+                    }
                     else
                     {
                         <img src="/images/bghome.png" style="height: 350px;">
