Image analytics sct

--- a/PMCTool.App/Views/Home/Index.cshtml
+++ b/PMCTool.App/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
                     }
                     else if(envName == "Sct")
                     {
-                        <img src="img/logo.png" style="height: 421px;border-radius: 10px;">
+                        <img src="/images/logo-sct.png" style="height: 421px;border-radius: 10px;">
                     }
                     else
                     {
