--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
@@ -264,7 +264,7 @@
                                        </div>
                                        <div class="row">
                                           <div class="col-md-6 mx-auto text-center">
-                                             <img class="img-fluid" alt="logo" src="/images/test.png">
+                                             @*<img class="img-fluid" alt="logo" src="/images/test.png">*@
                                           </div>
                                        </div>
                                     </div>
