--- a/PMCTool.App/Views/Home/Index.cshtml
+++ b/PMCTool.App/Views/Home/Index.cshtml
@@ -57,7 +57,11 @@
                       <center> 
                     @if(envName == "BanBien"){ 
                             <img src="/images/banbien.png" style="height: 400px;">
-                    }
+                    }else if (envName == "Sct")
+                    {
+                      <img src="/images/Sct.png" style="height: 400px;">
+
+}
                     else
                     {
                         <img src="/images/bghome.png" style="height: 350px;">
