--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -118,8 +118,8 @@
                             </div>
                             <div class="col-12">
                                 <div class="card" id="cardTable" hidden>
-                                    <div class="card-body ">
-                                        <div class="row justify-content-center">
+                                    <div class="card-body " id="messageBox">
+                                        <div class="row justify-content-center" id="rowTable">
                                             <div class="col-12">
                                                 <div class="card data-tables">
                                                     <div class="card-body table-striped table-no-bordered table-hover dataTable dtr-inline table-full-width">
